# ModelViewer-Build

.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  model_exporter.cpp  model_loader.h  obj_loader.cpp  ply_loader.cpp  stl_loader.cpp  stl_loader.h
app/src/main/java/com/dmitrybrant/modelviewer/: ArrayModel.kt  IndexedModel.kt  MainActivity.kt  MeshSimplifier.kt  Model.kt  ModelExporter.kt  ModelPart.kt  ModelRenderer.kt  ModelSurfaceView.kt  ModelViewerApplication.kt  NativeModelLoader.kt  RulerOverlayView.kt  RulerTool.kt  StlExporter.kt
app/src/main/java/com/dmitrybrant/modelviewer/ply/: PlyModel.kt
app/src/main/java/com/dmitrybrant/modelviewer/stl/: StlModel.kt
app/src/main/res/layout/: activity_main.xml  dialog_resize_model.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/raw/: single_light_fragment.glsl
app/src/main/res/values/: strings.xml
